[package]
name = "DioxusApp"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { path = "../../dioxus/packages/dioxus", features = ["mobile"] }

[package.metadata.cargo-apple.ios]
frameworks = [ "WebKit" ]

[package.metadata.bundle]
name = "DioxusApp"
identifier = "com.dioxuslabs"
resources = ["assets/**/*"]
category = "Utility"
short_description = "An example of a bundled application"
long_description = """
A trivial application that just displays a blank window with
a title bar.  It serves as an example of an application that
can be bundled with cargo-bundle, as well as a test-case for
cargo-bundle's support for bundling crate examples.
"""
osx_frameworks = ["WebKit"]
